Feat: 운동종류 카테고리 조회 추가, 운동종류 스키마 수정